# qrupdate-ng

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CODE  ChangeLog  INSTALL  INSTALL.md  Makeconf  Makeconf.g95  Makefile  README  README.md  TODO  qrupdate-config.cmake.in  qrupdate.pc.in
cmake/: FortranCompilerSettings.cmake  mingw-w32-i686.cmake  mingw-w64-x86_64.cmake
lapack-missing/: CMakeLists.txt  LapackMissing.cmake  README.md
lapack-missing/src/: caxpby.f  daxpby.f  dlacpy.f  dlaset.f  lsame.f  saxpby.f  zaxpby.f
src/: CMakeLists.txt  EXPORTS  Makefile  cch1dn.f  cch1up.f  cchdex.f  cchinx.f  cchshx.f  cgqvec.f  clu1up.f  clup1up.f  cqr1up.f  cqrdec.f  cqrder.f  cqrinc.f  cqrot.f  cqrshc.f  dch1dn.f  dch1up.f  dchdex.f  dchinx.f  dchshx.f  dgqvec.f  dlu1up.f  dlup1up.f  dqr1up.f  dqrdec.f  dqrder.f  dqrinc.f  dqrot.f  dqrshc.f  sch1dn.f  sch1up.f  schdex.f  schinx.f  schshx.f  sgqvec.f  slu1up.f  slup1up.f  sqr1up.f  (+19 more)
test/: CMakeLists.txt  Makefile  report_results  tch1dn.f  tch1up.f  tchdex.f  tchinx.f  tchshx.f  tlu1up.f  tlup1up.f  tqr1up.f  tqrdec.f  tqrder.f  tqrinc.f  tqrinr.f  tqrshc.f  utils.f
tools/: install-lapack-mingw-i686.sh  install-lapack-mingw-x86_64.sh
tools/ci/: cross-win32.sh  cross-win64.sh
